# ReCoDE-HandEyeCalibration

./: .gitignore  Acusense_RGB_K.txt  CMakeLists.txt  ExtrinsicMat.txt  FeatureDetection.cc  FeatureDetection.hpp  README.md  doxide.yaml  main.cc  mkdocs.yml  parameters.txt  q_history.txt  requirements.txt  utils.cc  utils.hpp
.github/workflows/: docs.yml
docs/: Background.md  Code_Overview.md  EigenLibraryIntro.md  FeatureDetection.md  OpenCVLibraryIntro.md  PointCloudLibraryIntro.md  input.md
include/: FeatureDetection.hpp  utils.hpp
input/: parameters.txt  pos_act.txt  pos_des.txt
input/pcd/: frame10.pcd  frame13.pcd  frame15.pcd  frame18.pcd  frame19.pcd  frame2.pcd  frame21.pcd  frame24.pcd  frame25.pcd  frame27.pcd  frame28.pcd  frame29.pcd  frame30.pcd  frame33.pcd  frame34.pcd  frame38.pcd  frame4.pcd  frame45.pcd  frame47.pcd  frame5.pcd  frame7.pcd
pcd/: frame0.pcd  frame1.pcd  frame11.pcd  frame12.pcd  frame14.pcd  frame16.pcd  frame17.pcd  frame20.pcd  frame22.pcd  frame23.pcd  frame26.pcd  frame3.pcd  frame31.pcd  frame32.pcd  frame35.pcd  frame36.pcd  frame37.pcd  frame39.pcd  frame40.pcd  frame41.pcd  frame42.pcd  frame43.pcd  frame44.pcd  frame46.pcd  frame48.pcd  frame49.pcd  frame6.pcd  frame8.pcd  frame9.pcd
src/: FeatureDetection.cc  main.cc  utils.cc
